fixed overlapping icons in group user table

--- a/src/FOM/UserBundle/Resources/public/sass/user/user_control.scss
+++ b/src/FOM/UserBundle/Resources/public/sass/user/user_control.scss
@@ -12,7 +12,7 @@
     width:150px;
     text-align: right;
     padding:0px;
-  }     
+  }
   .iconCheckboxActive, .iconCheckbox{
     @extend .iconOk;
     @extend .iconBig;
@@ -34,6 +34,7 @@
   .tdContentWrapper{
     position:relative;
     padding:5px;
+    padding-left: 25px;
     display:block;
   }
   .checkWrapper{
